--- a/WhereToPlay/app/src/main/AndroidManifest.xml
+++ b/WhereToPlay/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.fanc.wheretoplay">
 
     <!--<supports-screens
@@ -52,6 +53,7 @@
     <uses-permission android:name="android.permission.GET_TASKS"/>
     -->
     <application
+        tools:replace="android:allowBackup"
         android:name=".base.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
