--- a/WhereToPlay/app/src/main/AndroidManifest.xml
+++ b/WhereToPlay/app/src/main/AndroidManifest.xml
@@ -102,6 +102,10 @@
         <activity
             android:name=".activity.CheckCommentActivity"
             android:screenOrientation="portrait"/>
+        <!--查看评论-->
+        <activity android:name=".activity.CheckCommentsActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateUnspecified|adjustPan"/>
         <activity
             android:name=".activity.LargeImageActivity"
             android:screenOrientation="portrait"
