--- a/WhereToPlay/app/build.gradle
+++ b/WhereToPlay/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'com.jakewharton.butterknife'
 android {
     signingConfigs {
         config {
@@ -32,7 +32,7 @@ android {
 
         ndk {
             //选择要添加的对应cpu类型的.so库。
-            abiFilters 'armeabi', 'armeabi-v7a', 'armeabi-v8a','x86', 'x86_64'
+            abiFilters 'armeabi', 'armeabi-v7a', 'armeabi-v8a', 'x86', 'x86_64'
             // 还可以添加 'x86', 'x86_64', 'mips', 'mips64'
         }
 
@@ -83,7 +83,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
     //    compile 'com.tencent.tinker:tinker-android-lib:1.7.10'
 
     //                { changing = true }
@@ -91,14 +90,8 @@ dependencies {
     //    provided 'com.tencent.tinker:tinker-android-anno:1.7.10'
 
     //                { changing = true }
-    compile 'com.android.support:multidex:1.0.1'
-    compile 'com.youth.banner:banner:1.4.10'
     compile files('libs/glide-3.7.0.jar')
-    compile 'com.google.code.gson:gson:2.7'
-    compile 'com.orhanobut:logger:1.15'
-    compile 'cn.finalteam:galleryfinal:1.4.8.7'
     compile project(':okhttputils')
-    compile 'com.uwetrottmann.photoview:library:1.2.4'
     compile files('libs/alipaySdk-20170623-proguard.jar')
     compile files('libs/BaiduLBS_Android.jar')
     //    compile project(':datetimepicker')
@@ -110,6 +103,13 @@ dependencies {
     compile files('libs/umeng_social_shareboard.jar')
     compile files('libs/SocialSDK_WeiXin_Full.jar')
     compile files('libs/wechat-sdk-android-with-mta-1.1.6.jar')
+
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.youth.banner:banner:1.4.10'
+    compile 'com.google.code.gson:gson:2.7'
+    compile 'com.orhanobut:logger:1.15'
+    compile 'cn.finalteam:galleryfinal:1.4.8.7'
+    compile 'com.uwetrottmann.photoview:library:1.2.4'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'cn.jiguang.sdk:jpush:3.0.8'
     compile 'cn.jiguang.sdk:jcore:1.1.6'
@@ -118,6 +118,9 @@ dependencies {
     compile 'com.android.support:support-annotations:26.0.0-alpha1'
     compile 'com.android.support:support-v4:26.0.0-alpha1'
     compile 'com.android.support:design:26.0.0-alpha1'
+    compile 'com.jakewharton:butterknife:8.8.1'
+    testCompile 'junit:junit:4.12'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
 
 //def gitSha() {
