--- a/WhereToPlay/build.gradle
+++ b/WhereToPlay/build.gradle
@@ -3,11 +3,13 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
         maven { url "https://jitpack.io" }
         google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
 //        classpath "com.tencent.tinker:tinker-patch-gradle-plugin:1.7.10"
 
         // NOTE: Do not place your application dependencies here; they belong
