--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+WhereToPlay/.idea/compiler.xml
+WhereToPlay/.idea/copyright/profiles_settings.xml
