--- a/WhereToPlay/app/build.gradle
+++ b/WhereToPlay/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.jakewharton.butterknife'
 android {
+
+
     signingConfigs {
         config {
 //            try {
@@ -30,6 +32,12 @@ android {
         versionCode 20171027
         versionName "1.0.3"
 
+
+        sourceSets.main{
+
+            jniLibs.srcDirs = ['src/jniLibs'];
+
+            }
         ndk {
             //选择要添加的对应cpu类型的.so库。
             abiFilters 'armeabi', 'armeabi-v7a', 'armeabi-v8a', 'x86', 'x86_64'
@@ -95,15 +103,6 @@ dependencies {
     compile files('libs/alipaySdk-20170623-proguard.jar')
     compile files('libs/BaiduLBS_Android.jar')
     //    compile project(':datetimepicker')
-    compile files('libs/SocialSDK_QQ_Simplify.jar')
-    compile files('libs/umeng_social_api.jar')
-    compile files('libs/umeng_social_net.jar')
-    compile files('libs/umeng_social_tool.jar')
-    compile files('libs/umeng_shareboard_widget.jar')
-    compile files('libs/umeng_social_shareboard.jar')
-    compile files('libs/SocialSDK_WeiXin_Full.jar')
-    compile files('libs/wechat-sdk-android-with-mta-1.1.6.jar')
-
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.youth.banner:banner:1.4.10'
     compile 'com.google.code.gson:gson:2.7'
@@ -121,6 +120,9 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.8.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    compile files('libs/weiboSDKCore_3.1.4.jar')
+    compile files('libs/libammsdk.jar')
+
 }
 
 //def gitSha() {
