--- a/WhereToPlay/app/build.gradle
+++ b/WhereToPlay/app/build.gradle
@@ -120,7 +120,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.8.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    compile files('libs/weiboSDKCore_3.1.4.jar')
+    compile 'com.sina.weibo.sdk:core:4.1.0:openDefaultRelease@aar'
     compile files('libs/libammsdk.jar')
 
 }
