--- a/WhereToPlay/build.gradle
+++ b/WhereToPlay/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         jcenter()
         mavenCentral()
         maven { url "https://jitpack.io" }
+        maven { url "https://dl.bintray.com/thelasterstar/maven/" }
         google()
     }
     dependencies {
@@ -21,6 +22,7 @@ allprojects {
     repositories {
         jcenter()
         google()
+        maven { url "https://dl.bintray.com/thelasterstar/maven/" }
     }
 }
 
