--- a/WhereToPlay/app/build.gradle
+++ b/WhereToPlay/app/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'com.jakewharton.butterknife'
 android {
 
 
-//    signingConfigs {
-//        config {
+    signingConfigs {
+        config {
 //            try {
 //                keyAlias 'andoriddebugkey'
 //                keyPassword 'android'
@@ -13,12 +13,12 @@ android {
 //            } catch (ex) {
 //                throw new InvalidUserDataException(ex.toString())
 //            }
-//            keyAlias 'ktv_key'
-//            keyPassword 'adminhpzl'
-//            storeFile file('D:/keystore/hpzl_keystore')
-//            storePassword 'adminhpzl'
-//        }
-//    }
+            keyAlias 'ktv_key'
+            keyPassword 'adminhpzl'
+            storeFile file('D:/keystore/hpzl_keystore')
+            storePassword 'adminhpzl'
+        }
+    }
     compileSdkVersion 27
     buildToolsVersion '27.0.0'
     //recommend
@@ -74,11 +74,11 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-//            signingConfig signingConfigs.config
+            signingConfig signingConfigs.config
         }
         debug {
             debuggable true
-//            signingConfig signingConfigs.config
+            signingConfig signingConfigs.config
         }
     }
     dataBinding {
