--- a/WhereToPlay/local.properties
+++ b/WhereToPlay/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Oct 31 18:23:20 CST 2017
-sdk.dir=D\:\\Users\\Administrator\\AppData\\Local\\Android\\sdk
+#Fri Nov 03 10:23:02 CST 2017
+sdk.dir=D\:\\software\\Android_SDK_tools
