--- a/WhereToPlay/app/build.gradle
+++ b/WhereToPlay/app/build.gradle
@@ -75,11 +75,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //    compile 'com.tencent.tinker:tinker-android-lib:1.7.10'
-
     //                { changing = true }
-
     //    provided 'com.tencent.tinker:tinker-android-anno:1.7.10'
-
     //                { changing = true }
     compile files('libs/glide-3.7.0.jar')
     compile project(':okhttputils')
@@ -88,7 +85,6 @@ dependencies {
     //    compile project(':datetimepicker')
     compile 'com.sina.weibo.sdk:core:4.1.0:openDefaultRelease@aar'
     compile files('libs/libammsdk.jar')
-
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.youth.banner:banner:1.4.10'
     compile 'com.google.code.gson:gson:2.7'
@@ -106,12 +102,13 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.8.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.2.0'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.2.0'
     compile 'com.artemzin.rxjava:proguard-rules:1.2.0.0'
+    // 最新版本可参考 Download 徽章后对应的数值
+    compile 'com.qiyukf.unicorn:unicorn:3.11.1'
 }
 
 //def gitSha() {
