--- a/WhereToPlay/local.properties
+++ b/WhereToPlay/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 03 10:23:02 CST 2017
-sdk.dir=D\:\\software\\Android_SDK_tools
+#Sun Nov 05 20:00:03 CST 2017
+ndk.dir=F\:\\Android\\sdk\\ndk-bundle
+sdk.dir=F\:\\Android\\sdk
