--- a/WhereToPlay/local.properties
+++ b/WhereToPlay/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 03 15:16:29 CST 2017
-sdk.dir=D\:\\Users\\Administrator\\AppData\\Local\\Android\\sdk
+#Sun Nov 05 20:20:37 CST 2017
+ndk.dir=F\:\\Android\\sdk\\ndk-bundle
+sdk.dir=F\:\\Android\\sdk
