--- a/WhereToPlay/app/src/main/AndroidManifest.xml
+++ b/WhereToPlay/app/src/main/AndroidManifest.xml
@@ -74,10 +74,10 @@
         </activity>
         <activity
             android:name=".activity.SignInActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.ReuseActivity"
             android:screenOrientation="portrait"
@@ -123,12 +123,12 @@
             android:name="com.alipay.sdk.app.H5PayActivity"
             android:configChanges="orientation|keyboardHidden|navigation"
             android:exported="false"
-            android:screenOrientation="behind"></activity>
+            android:screenOrientation="behind" />
         <activity
             android:name="com.alipay.sdk.auth.AuthActivity"
             android:configChanges="orientation|keyboardHidden|navigation"
             android:exported="false"
-            android:screenOrientation="behind"></activity>
+            android:screenOrientation="behind" />
 
         <!-- 微信分享和支付 -->
         <activity
@@ -177,7 +177,7 @@
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
-            android:process=":remote"></service>
+            android:process=":remote" />
 
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
@@ -187,7 +187,7 @@
             android:name=".service.TinkerResultService"
             android:exported="false" />
 
-        <activity android:name=".activity.DiscoverImageActivity"></activity>
+        <activity android:name=".activity.DiscoverImageActivity" />
         <activity android:name=".activity.ListOrderActivity" />
         <activity android:name=".activity.DetailsOrderActivity" />
         <activity
@@ -217,12 +217,12 @@
 
         <service
             android:name="com.sina.weibo.sdk.net.DownloadService"
-            android:exported="false"></service>
+            android:exported="false" />
 
-        <activity android:name=".activity.PublicationEvaluationActivity"></activity>
-
-        <activity android:name=".imagepink.ImageSelectorActivity"/>
-        <activity android:name=".imagepink.ClipImageActivity"/>
+        <activity android:name=".activity.PublicationEvaluationActivity" />
+        <activity android:name=".imagepink.ImageSelectorActivity" />
+        <activity android:name=".imagepink.ClipImageActivity" />
+        <activity android:name=".activity.OrderPayActivity"></activity>
     </application>
 
 </manifest>
