--- a/WhereToPlay/app/src/main/AndroidManifest.xml
+++ b/WhereToPlay/app/src/main/AndroidManifest.xml
@@ -153,25 +153,27 @@
             android:theme="@style/Translucence" />
         <!-- qq分享 -->
 
-
-        <!-- QQ登陆 -->
         <activity
             android:name="com.tencent.tauth.AuthActivity"
-            android:launchMode="singleTask"
-            android:noHistory="true">
+            android:noHistory="true"
+            android:launchMode="singleTask" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
-
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-
-                <data android:scheme="tencent1105021586" />
+                <data android:scheme="tencent1106415195" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.tencent.connect.common.AssistActivity"
+
+
+        <activity android:name="com.tencent.connect.common.AssistActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+            />
+
+
+        <!-- QQ登陆 -->
+
 
         <!-- 百度定位 -->
         <service
