--- a/WhereToPlay/local.properties
+++ b/WhereToPlay/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 06 19:20:48 CST 2017
-sdk.dir=D\:\\software\\Android_SDK_tools
+#Tue Nov 07 09:29:11 CST 2017
+sdk.dir=D\:\\Users\\Administrator\\AppData\\Local\\Android\\sdk
