--- a/WhereToPlay/app/build.gradle
+++ b/WhereToPlay/app/build.gradle
@@ -75,8 +75,11 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //    compile 'com.tencent.tinker:tinker-android-lib:1.7.10'
+
     //                { changing = true }
+
     //    provided 'com.tencent.tinker:tinker-android-anno:1.7.10'
+
     //                { changing = true }
     compile files('libs/glide-3.7.0.jar')
     compile project(':okhttputils')
@@ -111,6 +114,7 @@ dependencies {
     compile 'com.qiyukf.unicorn:unicorn:3.11.1'
     compile files('libs/open_sdk_r5886_lite.jar')
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:1.1.6'
+    compile files('libs/alipaySdk-20170922.jar')
 }
 
 //def gitSha() {
