--- a/WhereToPlay/build.gradle
+++ b/WhereToPlay/build.gradle
@@ -6,11 +6,14 @@ buildscript {
         mavenCentral()
         maven { url "https://jitpack.io" }
         maven { url "https://dl.bintray.com/thelasterstar/maven/" }
+        maven {
+            url 'https://maven.google.com'
+        }
         google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
-        classpath 'com.jakewharton:butterknife-gradle-plugin:8.4.0'
+        //classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
 //        classpath "com.tencent.tinker:tinker-patch-gradle-plugin:1.7.10"
 
         // NOTE: Do not place your application dependencies here; they belong
