--- a/WhereToPlay/build.gradle
+++ b/WhereToPlay/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.1.51'
     repositories {
         jcenter()
         mavenCentral()
@@ -13,6 +14,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         //classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
 //        classpath "com.tencent.tinker:tinker-patch-gradle-plugin:1.7.10"
 
