--- a/WhereToPlay/app/src/main/AndroidManifest.xml
+++ b/WhereToPlay/app/src/main/AndroidManifest.xml
@@ -36,7 +36,9 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.READ_LOGS" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
-
+    <uses-permission android:name="org.simalliance.openmobileapi.SMARTCARD" />
+    <uses-permission android:name="android.permission.NFC" />
+    <uses-feature android:name="android.hardware.nfc.hce"/>
     <!--
     &lt;!&ndash;Required &ndash;&gt;
     <permission
@@ -62,6 +64,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup">
+        <uses-library android:name="org.simalliance.openmobileapi" android:required="false"/>
+
         <activity
             android:name=".activity.LaunchActivity"
             android:screenOrientation="portrait"
@@ -99,9 +103,7 @@
             android:name=".activity.AlterCityActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustUnspecified|stateHidden" />
-        <activity
-            android:name=".activity.CheckCommentActivity"
-            android:screenOrientation="portrait" />
+
         <!-- 查看评论 -->
         <activity
             android:name=".activity.CheckCommentsActivity"
@@ -114,25 +116,23 @@
         <activity
             android:name=".activity.WaiterPhotoActivity"
             android:screenOrientation="portrait" />
-        <!--<activity-->
-            <!--android:name=".activity.ServiceActivity"-->
-            <!--android:screenOrientation="portrait"-->
-            <!--android:windowSoftInputMode="stateUnspecified|adjustPan" />-->
+        <!-- <activity -->
+        <!-- android:name=".activity.ServiceActivity" -->
+        <!-- android:screenOrientation="portrait" -->
+        <!-- android:windowSoftInputMode="stateUnspecified|adjustPan" /> -->
         <!-- 支付宝支付 -->
         <activity
             android:name="com.alipay.sdk.app.H5PayActivity"
             android:configChanges="orientation|keyboardHidden|navigation|screenSize"
             android:exported="false"
             android:screenOrientation="behind"
-            android:windowSoftInputMode="adjustResize|stateHidden" >
-        </activity>
+            android:windowSoftInputMode="adjustResize|stateHidden"></activity>
         <activity
             android:name="com.alipay.sdk.app.H5AuthActivity"
             android:configChanges="orientation|keyboardHidden|navigation"
             android:exported="false"
             android:screenOrientation="behind"
-            android:windowSoftInputMode="adjustResize|stateHidden" >
-        </activity>
+            android:windowSoftInputMode="adjustResize|stateHidden"></activity>
 
         <!-- 微信分享和支付 -->
         <activity
@@ -159,22 +159,21 @@
 
         <activity
             android:name="com.tencent.tauth.AuthActivity"
-            android:noHistory="true"
-            android:launchMode="singleTask" >
+            android:launchMode="singleTask"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="tencent1106415195" />
             </intent-filter>
         </activity>
-
-
-        <activity android:name="com.tencent.connect.common.AssistActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+        <activity
+            android:name="com.tencent.connect.common.AssistActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            />
-
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
         <!-- QQ登陆 -->
 
@@ -189,9 +188,7 @@
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="H3sGc7uvHsmwwLbEnXpDSDmXeNqVENkL" />
         <!-- Tinker热修复 -->
-        <service
-            android:name=".service.TinkerResultService"
-            android:exported="false" />
+
 
         <activity android:name=".activity.DiscoverImageActivity" />
         <activity android:name=".activity.ListOrderActivity" />
@@ -199,20 +196,29 @@
         <activity
             android:name=".activity.ShareActivity"
             android:screenOrientation="sensor"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar">
-        </activity>
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"></activity>
 
-
-
-        <service
+       <!-- <service
             android:name="com.sina.weibo.sdk.net.DownloadService"
-            android:exported="false" >
-        </service>
+            android:exported="false"></service>-->
 
         <activity android:name=".activity.PublicationEvaluationActivity" />
         <activity android:name=".imagepink.ImageSelectorActivity" />
         <activity android:name=".imagepink.ClipImageActivity" />
-        <activity android:name=".activity.OrderPayActivity"></activity>
+        <activity android:name=".activity.OrderPayActivity" />
+        <activity
+            android:name="com.unionpay.uppay.PayActivity"
+            android:configChanges="orientation|keyboardHidden|keyboard"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity
+            android:name="com.unionpay.UPPayWapActivity"
+            android:configChanges="orientation|keyboardHidden|fontScale"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize" >
+        </activity>
+
     </application>
 
 </manifest>
