--- a/WhereToPlay/app/build.gradle
+++ b/WhereToPlay/app/build.gradle
@@ -6,6 +6,8 @@ android {
 
     compileSdkVersion 27
     buildToolsVersion '27.0.0'
+
+    flavorDimensions "color"
     //recommend
     dexOptions {
         jumboMode = true
@@ -49,9 +51,10 @@ android {
             zipAlignEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
         }
         debug {
-            debuggable false
+            debuggable true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.debug
@@ -60,7 +63,35 @@ android {
     dataBinding {
         enabled = true
     }
+
+
+    productFlavors {
+
+        _test {
+            dimension "color"
+        }
+        _company {
+            dimension "color"
+        }
+        _360 {}
+        _yingyongbao {}
+        _baidu {}
+        _xiaomi {}
+        _huawei{}
+        _androidmarkt{}
+        _wandoujia{}
+        _anzhi{}
+        _yingyonghui{}
+        _91{}
+
+    }
+
+    productFlavors.all {
+        flavor -> flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
+    }
 }
+
+
 
 
 repositories {
