--- a/WhereToPlay/build.gradle
+++ b/WhereToPlay/build.gradle
@@ -1,5 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+apply plugin: 'kotlin-android-extensions'
+
 buildscript {
     ext.kotlin_version = '1.2.0'
     repositories {
