--- a/WhereToPlay/app/src/main/AndroidManifest.xml
+++ b/WhereToPlay/app/src/main/AndroidManifest.xml
@@ -88,7 +88,6 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.ReuseActivity"
-
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity
@@ -250,7 +249,7 @@
         <activity
             android:name=".Main2Activity"
             android:screenOrientation="portrait" />
-
+        <activity android:name=".activity.DisplayActivity"></activity>
     </application>
 
 </manifest>
