--- a/WhereToPlay/app/src/main/AndroidManifest.xml
+++ b/WhereToPlay/app/src/main/AndroidManifest.xml
@@ -198,6 +198,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.ListOrderActivity"
+            android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.DetailsOrderActivity"
@@ -234,7 +235,7 @@
             android:configChanges="orientation|keyboardHidden|fontScale"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".activity.BookActivity" />
+
         <activity
             android:name=".activity.EvaluationSuccessActivity"
             android:screenOrientation="portrait" />
