--- a/WhereToPlay/app/build.gradle
+++ b/WhereToPlay/app/build.gradle
@@ -12,7 +12,9 @@ android {
     dexOptions {
         jumboMode = true
         javaMaxHeapSize "4g"
+        incremental true
     }
+
 
     signingConfigs {
         release {
@@ -27,9 +29,9 @@ android {
         applicationId "com.fanc.wheretoplay"
         minSdkVersion 17
         targetSdkVersion 27
-        versionCode 20181515
+        versionCode 201890002
 
-        versionName "1.3.3"
+        versionName "1.3.5"
 
 
         sourceSets.main {
@@ -142,7 +144,7 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    compile 'com.qiyukf.unicorn:unicorn:3.11.1'
+    compile 'com.qiyukf.unicorn:unicorn:3.13.0'
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:1.4.0'
     compile 'com.sina.weibo.sdk:core:4.1.0:openDefaultRelease@aar'
     implementation 'com.android.support:appcompat-v7:27.0.2'
@@ -153,7 +155,7 @@ dependencies {
     implementation project(':didi_sdk_for_common_v1.1.0_12_08')
     implementation 'com.android.support:support-v4:27.0.2'
     debugCompile 'com.amitshekhar.android:debug-db:1.0.0'
-    compile 'com.jcodecraeer:xrecyclerview:1.5.7'
+    compile 'com.jcodecraeer:xrecyclerview:1.5.8'
 
 }
 
