--- a/WhereToPlay/app/build.gradle
+++ b/WhereToPlay/app/build.gradle
@@ -29,9 +29,9 @@ android {
         applicationId "com.fanc.wheretoplay"
         minSdkVersion 17
         targetSdkVersion 27
-        versionCode 201890006
+        versionCode 201890008
 
-        versionName "1.3.6"
+        versionName "1.3.8"
 
 
         sourceSets.main {
@@ -118,7 +118,7 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-
+    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.18'
     implementation project(':didi_sdk_for_common_v1.1.0_12_08')
     implementation project(':lib-zxing')
     implementation project(':common')
