--- a/WhereToPlay/app/build.gradle
+++ b/WhereToPlay/app/build.gradle
@@ -18,7 +18,7 @@ android {
 
     signingConfigs {
         release {
-            storeFile file("D:/Desktop/hpzl_keystore.jks")
+           // storeFile file("D:/Desktop/hpzl_keystore.jks")
             storePassword "adminhpzl"
             keyAlias "ktv_key"
             keyPassword "adminhpzl"
