--- a/WhereToPlay/app/src/main/AndroidManifest.xml
+++ b/WhereToPlay/app/src/main/AndroidManifest.xml
@@ -270,6 +270,13 @@
             android:name=".activity.PayPayActivity"
             android:screenOrientation="portrait" />
 
+        <receiver android:name=".service.InstallReceiver" >
+
+            <intent-filter>
+                <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
