--- a/WhereToPlay/app/src/main/AndroidManifest.xml
+++ b/WhereToPlay/app/src/main/AndroidManifest.xml
@@ -60,13 +60,14 @@
     <uses-permission android:name="android.permission.GET_TASKS"/>
     -->
     <application
+        tools:replace="android:icon"
         android:name=".base.App"
-        android:allowBackup="false"
+
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:replace="android:allowBackup">
+        >
         <uses-library
             android:name="org.simalliance.openmobileapi"
             android:required="false" />
