--- a/WhereToPlay/app/src/main/AndroidManifest.xml
+++ b/WhereToPlay/app/src/main/AndroidManifest.xml
@@ -266,6 +266,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.DisplayActivity"
+            android:windowSoftInputMode="stateUnspecified|adjustPan"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.PayPayActivity"
