--- a/WhereToPlay/app/build.gradle
+++ b/WhereToPlay/app/build.gradle
@@ -16,6 +16,9 @@ android {
         incremental true
     }
 
+    packagingOptions{
+        exclude  'META-INF/rxjava.properties'
+    }
 
 
 
@@ -90,7 +93,7 @@ android {
         _test {
             dimension "color"
         }
-        _company {
+       /* _company {
             dimension "color"
         }
         _360 {}
@@ -106,7 +109,7 @@ android {
         _oppo {}
         _vivo {}
         _meizu {}
-        _sougou {}
+        _sougou {}*/
 
     }
 
@@ -135,7 +138,7 @@ dependencies {
 
     compile 'com.android.support:multidex:1.0.3'
     compile 'com.youth.banner:banner:1.4.10'
-    compile 'com.orhanobut:logger:1.15'
+    
     compile 'cn.finalteam:galleryfinal:1.4.8.7'
     compile 'com.uwetrottmann.photoview:library:1.2.4'
     compile 'cn.jiguang.sdk:jpush:3.0.8'
@@ -156,7 +159,8 @@ dependencies {
     compile 'com.umeng.analytics:analytics:6.1.2'
     debugCompile 'com.amitshekhar.android:debug-db:1.0.0'
     compile 'com.jcodecraeer:xrecyclerview:1.5.9'
-    compile 'cn.pedant.sweetalert:library:1.3'
+    compile 'com.github.f0ris.sweetalert:library:1.5.1'
+    compile 'com.jph.takephoto:takephoto_library:4.0.3'
 
 
 }
