--- a/WhereToPlay/app/src/main/AndroidManifest.xml
+++ b/WhereToPlay/app/src/main/AndroidManifest.xml
@@ -77,6 +77,7 @@
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.fanc.wheretoplay.camera_photos"
             android:exported="false"
+            tools:replace="android:authorities"
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
@@ -271,6 +272,11 @@
         <activity
             android:name=".activity.PayPayActivity"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".activity.SimpleFragmentActivity"
+            android:screenOrientation="portrait" />
+
 
         <receiver android:name=".service.InstallReceiver" >
 
